--- a/front/src/features/PricingPlans/styles.module.scss
+++ b/front/src/features/PricingPlans/styles.module.scss
@@ -2,11 +2,15 @@
   margin-top: 3rem;
   padding: 20px;
   display: grid;
-  grid-template-columns: 1fr;
   gap: 2rem;
+  grid-template-columns: repeat(4, 1fr);
 
-  @media (min-width: 768px) {
-    grid-template-columns: repeat(3, 1fr);
+  @media (max-width: 1268px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (max-width: 769) {
+    grid-template-columns: 1fr;
   }
 }
 
@@ -38,6 +42,7 @@
 }
 
 .featuresList {
+  padding-left: 0;
   margin-top: 1.5rem;
   display: flex;
   flex-direction: column;
@@ -91,4 +96,7 @@
   &:hover {
     background-color: #d1d5db;
   }
-} 
+}
+
+@media (max-width: 900px) {
+}
