--- a/front/src/features/PricingPreview/styles.module.scss
+++ b/front/src/features/PricingPreview/styles.module.scss
@@ -27,11 +27,16 @@
 .pricingGrid {
   margin-top: 3rem;
   display: grid;
-  grid-template-columns: 1fr;
   gap: 2rem;
 
-  @media (min-width: 768px) {
-    grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+
+  @media (max-width: 1268px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (max-width: 769) {
+    grid-template-columns: 1fr;
   }
 }
 
