--- a/front/src/features/LessonContent/styles.module.scss
+++ b/front/src/features/LessonContent/styles.module.scss
@@ -2,13 +2,14 @@
   max-width: 80rem;
   margin: 0 auto;
   padding: 0 1rem;
+  flex-grow: 2;
 
   @media (min-width: 640px) {
     padding: 0 1.5rem;
   }
 
   @media (min-width: 1024px) {
-    padding: 0 2rem;
+    padding: 0 2rem 1rem;
   }
 }
 
@@ -19,6 +20,7 @@
 }
 
 .card {
+  max-width: 600px;
   margin-top: 2rem;
   padding: 1.5rem;
   border-radius: 0.5rem;
