--- a/front/src/features/HeroSection/styles.module.scss
+++ b/front/src/features/HeroSection/styles.module.scss
@@ -1,6 +1,6 @@
 .hero {
   padding: 5rem 0;
-  background: linear-gradient(to right, #eff6ff, #ffffff);
+  background: linear-gradient(to right, #e4eefc, #f4fcfc);
 }
 
 .heroContent {
