--- a/front/src/features/Header/styles.module.scss
+++ b/front/src/features/Header/styles.module.scss
@@ -2,20 +2,13 @@
 .nav {
   background-color: #ffffff;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  height: var(--header-height);
+  padding: 0 20px;
 }
 
 .navContent {
   max-width: 80rem;
   margin: 0 auto;
-  padding: 0 1rem;
-
-  @media (min-width: 640px) {
-    padding: 0 1.5rem;
-  }
-
-  @media (min-width: 1024px) {
-    padding: 0 2rem 1rem;
-  }
 }
 
 .navContainer {
