--- a/front/src/components/Accordeon/styles.module.scss
+++ b/front/src/components/Accordeon/styles.module.scss
@@ -1,8 +1,15 @@
 .accordeon {
   padding: 10px 0;
+  cursor: pointer;
 
   ::marker {
     width: 50px;
     height: 50px;
   }
-} 
+
+  img {
+    margin-left: 10px;
+    width: 20px;
+    height: 20px;
+  }
+}
