--- a/front/src/features/Header/styles.module.scss
+++ b/front/src/features/Header/styles.module.scss
@@ -1,4 +1,3 @@
-
 .nav {
   background-color: #ffffff;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
@@ -7,7 +6,7 @@
 }
 
 .navContent {
-  max-width: 80rem;
+  max-width: 95%;
   margin: 0 auto;
 }
 
@@ -31,4 +30,89 @@
   display: flex;
   align-items: center;
   gap: 25px;
+}
+
+.mobileNav {
+  display: none;
+  position: relative;
+  width: 100%;
+  background-color: var(--color-background);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.mobileNavContent {
+  padding: 1rem;
+}
+
+.mobileNavContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.mobileNavLeft {
+  flex: 1;
+}
+
+.burgerButton {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 22px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  z-index: 10;
+
+  &.active {
+    span {
+      &:first-child {
+        transform: translateY(9px) rotate(45deg);
+      }
+
+      &:nth-child(2) {
+        opacity: 0;
+      }
+
+      &:last-child {
+        transform: translateY(-9px) rotate(-45deg);
+      }
+    }
+  }
+}
+
+.mobileMenu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: #ffffff;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 5;
+
+  a {
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  .nav {
+    display: none;
+  }
+
+  .mobileNav {
+    display: block;
+  }
+}
+
+.burgerButtonLine {
+  width: 100%;
+  height: 3px;
+  background-color: #bbb;
 }
