--- a/front/src/components/NavLink/styles.module.scss
+++ b/front/src/components/NavLink/styles.module.scss
@@ -1,13 +1,13 @@
 .navLink {
-  color: #4b5563;
+  color: var(--text-color);
   transition: color 0.2s;
   text-decoration: none;
 
   &:hover {
-    color: #2563eb;
+    color: var(--link-hover-color);
   }
 
   &[data-active="true"] {
-    color: #2563eb;
+    color: var(--link-active-color);
   }
 } 
