--- a/front/src/features/CoursesList/styles.module.scss
+++ b/front/src/features/CoursesList/styles.module.scss
@@ -2,13 +2,12 @@
   flex-grow: 2;
   padding: 20px;
   max-width: 1200px;
-  margin: 0 auto;
 }
 
 .coursesTitle {
   font-size: 1.5rem;
   font-weight: 600;
-  margin: 36px 0;
+  margin: 24px 0 0;
 }
 
 .coursesList {
