--- a/front/src/features/FeaturesSection/styles.module.scss
+++ b/front/src/features/FeaturesSection/styles.module.scss
@@ -1,5 +1,11 @@
 .features {
-  padding: 3rem 0;
+}
+
+.featureTitle {
+  text-align: center;
+  font-size: 32px;
+  font-weight: 700;
+  padding-bottom: 20px;
 }
 
 .featuresContent {
