--- a/front/src/features/LessonContent/components/Questions/styles.module.scss
+++ b/front/src/features/LessonContent/components/Questions/styles.module.scss
@@ -37,7 +37,7 @@
 .radio {
   width: 1rem;
   height: 1rem;
-  color: #2563eb;
+  color: var(--link-active-color);
   border-color: #d1d5db;
   border-radius: 9999px;
   cursor: pointer;
@@ -50,7 +50,7 @@
 
 .optionText {
   margin-left: 0.5rem;
-  color: #4b5563;
+  color: var(--text-color);
 }
 
 .result {
