--- a/front/src/features/LessonContent/styles.module.scss
+++ b/front/src/features/LessonContent/styles.module.scss
@@ -1,6 +1,5 @@
 .content {
   max-width: 80rem;
-  margin: 0 auto;
   padding:  0 20px 20px;
   flex-grow: 2;
 }
@@ -9,7 +8,7 @@
   font-size: 1.5rem;
   font-weight: 700;
   color: #111827;
-  margin: 36px 0;
+  margin: 24px 0 0;
 }
 
 .card {
@@ -19,6 +18,10 @@
   border-radius: 0.5rem;
   background-color: #ffffff;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+
+  img {
+    max-width: calc(100vw - 88px);
+  }
 }
 
 .cardTitle {
@@ -36,7 +39,7 @@
 }
 
 .paragraph {
-  color: #4b5563;
+  color: var(--text-color);
   margin-bottom: 1rem;
 }
 
@@ -71,7 +74,7 @@
 .radio {
   width: 1rem;
   height: 1rem;
-  color: #2563eb;
+  color: var(--link-active-color);
   border-color: #d1d5db;
   border-radius: 9999px;
   cursor: pointer;
@@ -84,7 +87,7 @@
 
 .optionText {
   margin-left: 0.5rem;
-  color: #4b5563;
+  color: var(--text-color);
 }
 
 .result {
@@ -114,7 +117,7 @@
   transition: background-color 0.2s;
 
   &:hover {
-    background-color: #2563eb;
+    background-color: var(--link-hover-color);
   }
 
   &:disabled {
