--- a/front/src/features/PricingPreview/styles.module.scss
+++ b/front/src/features/PricingPreview/styles.module.scss
@@ -6,44 +6,27 @@
 .pricingContent {
   max-width: 80rem;
   margin: 0 auto;
-  padding: 0 1rem;
-
-  @media (min-width: 640px) {
-    padding: 0 1.5rem;
-  }
-
-  @media (min-width: 1024px) {
-    padding: 0 2rem 1rem;
-  }
+  padding: 0 16px;
 }
 
 .pricingTitle {
   text-align: center;
-  font-size: 2.25rem;
+  font-size: 32px;
   font-weight: 700;
-  color: #111827;
+  padding-bottom: 20px;
 }
 
-.pricingGrid {
+.pricingContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 2%;
-
-
-  @media (max-width: 1268px) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  @media (max-width: 769) {
-    grid-template-columns: 1fr;
-  }
+  gap: 10px;
 }
 
 .card {
   width: 28%;
   min-width: 300px;
-  padding: 0 2% 20px;
+  padding: 0 20px 20px;
   margin: 10px 0;
   border-radius: 0.5rem;
   background-color: #ffffff;
@@ -74,7 +57,7 @@
   text-decoration: none;
 
   &:hover {
-    background-color: #2563eb;
+    background-color: var(--link-hover-color);
   }
 }
 
