--- a/front/src/app/layout.module.scss
+++ b/front/src/app/layout.module.scss
@@ -2,6 +2,9 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  font-family: "Inter", "Inter Fallback";
+  font-style: normal;
+  // --font-poppins: "Poppins", "Poppins Fallback";
 }
 
 .main {
