--- a/front/src/features/LessonContent/styles.module.scss
+++ b/front/src/features/LessonContent/styles.module.scss
@@ -1,14 +1,25 @@
 .content {
   max-width: 80rem;
-  padding:  0 20px 20px;
+  padding: 0 20px 20px;
   flex-grow: 2;
+  line-height: 1.5;
 }
 
 .title {
+  align-items: center;
+  display: flex;
+  gap: 10px;
+  margin: 24px 0 0;
   font-size: 1.5rem;
   font-weight: 700;
   color: #111827;
-  margin: 24px 0 0;
+}
+
+.level {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  padding: 15px 0 0;
 }
 
 .card {
