--- a/front/src/app/(learningPages)/layout.module.scss
+++ b/front/src/app/(learningPages)/layout.module.scss
@@ -2,7 +2,7 @@
 
 .twoColumn {
   display: flex;
-  min-height: calc(100vh - var(--header-height) - var(--footer-height));
+  min-height: calc(100vh - var(--header-height));
 
   @include helpers.deviceWidth(toTabletLandscape) {
     flex-direction: column;
