--- a/front/src/app/globals.scss
+++ b/front/src/app/globals.scss
@@ -4,7 +4,6 @@
   --foreground-rgb: 0, 0, 0;
   --background-rgb: 255, 255, 255;
   --header-height: 60px;
-  --footer-height: 70px;
   --text-color: #4b5563;
   --link-active-color: #2563eb;
   --link-hover-color: #6e18d1;
@@ -134,9 +133,51 @@ h2 {
   padding: 40px;
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 20px;
 
   @include helpers.deviceWidth(toTabletLandscape) {
     padding: 20px;
+  }
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #ddd;
+
+  &_fixed {
+    position: fixed;
+    padding: 16px;
+    border-radius: 8px;
+    background-color: #5dfb85;
+    right: 50px;
+    top: 200px;
+    z-index: 9;
+    border: 1px solid #ddd;
+
+    .pagination-numbers {
+      flex-direction: column;
+    }
+  }
+
+  &-numbers {
+    display: flex;
+    gap: 4px;
+
+    &-item {
+      padding: 6px;
+      border-radius: 4px;
+      border: 1px solid #ddd;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #dce5f5;
+      }
+
+      &_active {
+        background-color: #b5d0fc;
+      }
+    }
   }
 }
