--- a/front/src/features/Footer/styles.module.scss
+++ b/front/src/features/Footer/styles.module.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: #e5eef8;
-  height: var(--footer-height);
+  height: auto;
   display: flex;
   align-items: center;
   padding: 0 20px;
