--- a/front/src/features/CoursePreview/components/CoursePreviewItem/styles.module.scss
+++ b/front/src/features/CoursePreview/components/CoursePreviewItem/styles.module.scss
@@ -7,8 +7,8 @@
 
 .topicsList {
   list-style: none;
-  padding: 0;
-  margin: 0;
+  padding: 0px;
+  margin: 0px;
 }
 
 .topicItem {
@@ -21,7 +21,7 @@
   color: #333;
 
   &:last-child {
-    margin-bottom: 0;
+    margin-bottom: 0px;
   }
 }
 
