--- a/front/src/components/BreadCrumbs/styles.module.scss
+++ b/front/src/components/BreadCrumbs/styles.module.scss
@@ -1,11 +1,11 @@
 .breadcrumbs {
-  padding: 16px 0;
+  padding: 16px 0px;
 
   ol {
     display: flex;
     align-items: center;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     list-style: none;
   }
 
