--- a/front/src/components/MessagePlateProps/styles.module.scss
+++ b/front/src/components/MessagePlateProps/styles.module.scss
@@ -1,6 +1,6 @@
 .plate {
-  margin: 20 0;
-  padding: 20;
+  margin: 20px 0px;
+  padding: 20px;
   border: 1px solid;
   border-radius: 8;
   display: flex;
