--- a/front/src/features/CourseContent/components/Lesson/styles.module.scss
+++ b/front/src/features/CourseContent/components/Lesson/styles.module.scss
@@ -1,7 +1,7 @@
 .lessonItem {
   display: flex;
   align-items: center;
-  padding: 0.75rem 0;
+  padding: 0.75rem 0px;
   border-bottom: 1px solid #eee;
 }
 
