--- a/front/src/features/CourseContent/components/Topic/styles.module.scss
+++ b/front/src/features/CourseContent/components/Topic/styles.module.scss
@@ -1,7 +1,7 @@
 .lessonItem {
   display: flex;
   align-items: center;
-  padding: 0.75rem 0;
+  padding: 0.75rem 0px;
   border-bottom: 1px solid #eee;
 }
 
@@ -14,8 +14,8 @@
 
 .lessonsList {
   list-style: none;
-  padding: 0;
-  margin: 0;
+  padding: 0px;
+  margin: 0px;
 }
 
 .lessonItem:last-child {
