--- a/front/src/features/CoursesList/components/Course/styles.module.scss
+++ b/front/src/features/CoursesList/components/Course/styles.module.scss
@@ -60,15 +60,15 @@
 
 .topicsList {
   list-style: none;
-  padding: 0;
-  margin: 0;
+  padding: 0px;
+  margin: 0px;
 }
 
 .topicItem {
   display: flex;
   align-items: center;
   gap: 0.75rem;
-  padding: 0.5rem 0;
+  padding: 0.5rem 0px;
   font-size: 0.875rem;
 }
 
