--- a/front/src/features/FeaturesSection/styles.module.scss
+++ b/front/src/features/FeaturesSection/styles.module.scss
@@ -1,25 +1,7 @@
 .features {
 }
 
-.featureTitle {
-  text-align: center;
-  font-size: 32px;
-  font-weight: 700;
-  padding-bottom: 20px;
-}
-
 .featuresContent {
-  max-width: 80rem;
-  margin: 0 auto;
-  padding: 0 1rem;
-
-  @media (min-width: 640px) {
-    padding: 0 1.5rem;
-  }
-
-  @media (min-width: 1024px) {
-    padding: 0 2rem 1rem;
-  }
 }
 
 .featuresGrid {
@@ -37,6 +19,15 @@
   border-radius: 0.5rem;
   background-color: #ffffff;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+
+  &-icon {
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #3893ee88;
+    padding: 10px;
+  }
 }
 
 .cardTitle {
@@ -48,4 +39,4 @@
 .cardText {
   margin-top: 0.5rem;
   color: #6b7280;
-} 
+}
