--- a/front/src/features/HeroSection/styles.module.scss
+++ b/front/src/features/HeroSection/styles.module.scss
@@ -1,72 +1,63 @@
+@use "../../styles/helpers";
+
 .hero {
-  padding: 5rem 0;
   background: linear-gradient(to right, #e4eefc, #f4fcfc);
 }
 
-.heroContent {
-  max-width: 80rem;
-  margin: 0 auto;
-  padding: 0 1rem;
+.content {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  gap: 50px;
+  margin: 50px var(--main-mobile-margin-X);
 
-  @media (min-width: 640px) {
-    padding: 0 1.5rem;
-  }
-
-  @media (min-width: 1024px) {
-    padding: 0 2rem 1rem;
+  @include helpers.deviceWidth(fromTabletLandscape) {
+    margin: 100px var(--main-margin-X);
   }
 }
 
-.heroText {
-  text-align: center;
+.left {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 3;
+
+  @include helpers.deviceWidth(fromTabletLandscape) {
+    flex-basis: 55%;
+  }
 }
 
 .title {
-  font-size: 2.25rem;
+  margin-top: 50px;
+  font-size: 32px;
   font-weight: 700;
   color: #111827;
+  text-align: center;
 
-  @media (min-width: 640px) {
-    font-size: 3rem;
-  }
-
-  @media (min-width: 768px) {
-    font-size: 3.75rem;
+  @include helpers.deviceWidth(fromTabletPortrait) {
+    text-align: left;
   }
 }
 
 .subtitle {
   margin-top: 0.75rem;
-  max-width: 28rem;
-  margin-left: auto;
-  margin-right: auto;
   font-size: 1rem;
   color: #6b7280;
+  text-align: center;
 
-  @media (min-width: 640px) {
-    font-size: 1.125rem;
-  }
-
-  @media (min-width: 768px) {
-    margin-top: 1.25rem;
-    font-size: 1.25rem;
+  @include helpers.deviceWidth(fromTabletPortrait) {
+    margin-top: 1.5rem;
+    font-size: 1rem;
     max-width: 48rem;
+    text-align: left;
   }
 }
 
 .ctaContainer {
-  margin-top: 1.25rem;
+  margin: 1.25rem auto;
   max-width: 28rem;
-  margin-left: auto;
-  margin-right: auto;
 
-  @media (min-width: 640px) {
-    display: flex;
-    justify-content: center;
-  }
-
-  @media (min-width: 768px) {
-    margin-top: 2rem;
+  @include helpers.deviceWidth(fromTabletPortrait) {
+    margin: 2rem 0 0;
   }
 }
 
@@ -77,10 +68,62 @@
   color: #ffffff;
   font-weight: 500;
   border-radius: 0.375rem;
-  text-align: center;
   transition: background-color 0.2s;
 
   &:hover {
     background-color: var(--link-hover-color);
   }
+}
+
+.right {
+  display: flex;
+  align-items: center;
+  flex-grow: 2;
+  flex-basis: 45%;
+  position: relative;
+
+  &-plate {
+    width: 100%;
+    position: relative;
+
+    aspect-ratio: 1.5;
+    border-radius: 12px;
+    background-image: url('/heroBack.jpg');
+    background-size: cover;
+    // background-color: #90baff;
+    box-shadow: 16px 16px 10px 10px #8ea7cf44;
+
+    .iconBook {
+      left: 50%;
+      top: 50%;
+      position: relative;
+      transform: translateX(-50%) translateY(-50%);
+    }
+
+    @include helpers.deviceWidth(tabletPortrait) {
+      padding: 70px;
+
+      .iconBook {
+        width: 100px;
+        height: 100px;
+      }
+    }
+  }
+
+  @include helpers.deviceWidth(toTabletPortrait) {
+    display: none;
+  }
+}
+
+.success {
+  position: absolute;
+  left: -20px;
+  bottom: -10px;
+  display: flex;
+  align-items: center;
+  padding: 16px;
+  gap: 20px;
+  background-color: #fff;
+  border-radius: 12px;
+  font-size: 14px;
 }
