--- a/front/src/features/VideosList/styles.module.scss
+++ b/front/src/features/VideosList/styles.module.scss
@@ -1,7 +1,3 @@
-:root {
-  --video-border-radius: 6px;
-}
-
 .videosPage {
   display: flex;
   flex-direction: column;
@@ -17,7 +13,7 @@
   flex: 0 1 300px;
   min-width: 0;
   border: 1px solid #ccc;
-  border-radius: var(--video-border-radius);
+  border-radius: 6px;
 }
 
 .videoName {
@@ -50,5 +46,5 @@
   width: 100%;
   height: 200px;
   object-fit: cover;
-  border-radius: var(--video-border-radius) var(--video-border-radius) 0 0;
+  border-radius: 6px 6px 0 0;
 }
