добавил новый тип упражнений

--- a/front/src/features/Footer/styles.module.scss
+++ b/front/src/features/Footer/styles.module.scss
@@ -41,8 +41,11 @@
 }
 
 .icon {
-  width: fit-content;
-  padding: 20px;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 8px;
   background-color: #34f;
 }
