--- a/front/src/features/StepsSection/styles.module.scss
+++ b/front/src/features/StepsSection/styles.module.scss
@@ -19,9 +19,10 @@
   flex-direction: column;
   align-items: center;
   gap: 40px;
+  position: relative;
 
   a {
-    color: #4444ff
+    color: #4444ff;
   }
 }
 
@@ -32,7 +33,17 @@
 
 .icon {
   border-radius: 8px;
-  padding: 30px 34px;
+  font-size: 32px;
+  width: 70px;
+  height: 70px;
+  padding: 10px;
   background-color: #3344ff;
   color: #fff;
+
+  &:hover {
+    position: relative;
+    transform: scale(1.1);
+    background-color: #4c5af8;
+    cursor: pointer;
+  }
 }
