--- a/front/src/features/PhraseBuilder/builder.module.scss
+++ b/front/src/features/PhraseBuilder/builder.module.scss
@@ -1,31 +1,18 @@
+.container {
+}
+
+@mixin pastePlace {
+  background-color: #eee;
+  border: 1px dotted darkorange;
+}
+
 .words {
   display: flex;
   gap: 10px;
 }
 
-.wordItem {
-  width: fit-content;
-  height: fit-content;
-  padding: 4px 8px;
-  border-radius: 4px;
-  background-color: rgb(137, 217, 252);
-  cursor: grab;
-
-  &_result {
-    background-color: rgb(137, 252, 143);
-  }
-
-  &:active {
-    cursor: grabbing;
-  }
-
-  // когда слово является целью на замену перетаскиваемым словом
-  &_aim {
-    transform: translateY(-10px);
-  }
-}
-
-.result {
+.workField {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   min-height: 50px;
@@ -33,21 +20,104 @@
   padding: 20px;
   border: 1px solid #ddd;
   border-radius: 8px;
+  row-gap: 20px;
+
+  &_dropActive {
+    .beforeWordsPlace {
+      @include pastePlace;
+    }
+
+    .betweenWordsPlace {
+      visibility: inherit;
+    }
+  }
+}
+
+.wordItem {
+  position: relative;
+  width: fit-content;
+  height: fit-content;
+  padding: 4px 8px;
+  border-radius: 4px;
+  background-color: rgb(137, 217, 252);
+  cursor: grab;
+
+  &:hover {
+    .wordItem-cross {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+
+  &:active {
+    cursor: grabbing;
+  }
+
+  &_drugging {
+    .wordItem-cross {
+      display: none !important;
+    }
+  }
+
+  &_empty {
+    color: transparent;
+  }
+
+  &_result {
+    background-color: rgb(137, 252, 143);
+  }
+
+  // когда слово является целью на замену перетаскиваемым словом
+  &_aim {
+    transform: translateY(-10px);
+  }
+
+  &-cross {
+    display: none;
+    position: absolute;
+    right: -10px;
+    top: -10px;
+    border: 2px solid #aaa;
+    width: 20px;
+    height: 20px;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
+.resultItem {
+  display: flex;
+  height: fit-content;
 }
 
 .beforeWordsPlace {
-  position: absolute;
-  left: 10px;
-  top: 10px;
-  padding: 4px 18px;
-  height: fit-content;
-  // color: transparent;
-  // background-color: transparent;
-  visibility: hidden;
+  width: 50px;
+  box-sizing: border-box;
+  background-color: transparent;
+  color: transparent;
+  user-select: none;
 
-  &_active {
-    border: 1px dotted #ddd;
-    background-color: #ccc;
-    visibility: inherit;
+  &:after {
+    display: none;
+  }
+
+  &_dragOver {
+    transform: scaleX(1.6) scaleY(1.4);
+  }
+}
+
+.betweenWordsPlace {
+  width: 30px;
+  position: relative;
+  visibility: hidden;
+  z-index: 2;
+
+  @include pastePlace;
+
+  &_dragOver {
+    transform: scaleX(1) scaleY(1.4);
   }
 }
