--- a/front/src/components/LevelIcon/styles.module.scss
+++ b/front/src/components/LevelIcon/styles.module.scss
@@ -1,8 +1,12 @@
-.icon {
+.level {
   display: inline;
+  vertical-align: middle;
 
   img {
-    margin-right: 4px;
-    vertical-align: middle;
+    margin-right: 8px;
+  }
+
+  &-text {
+    vertical-align: text-bottom;
   }
 }
