--- a/front/src/features/LessonContent/styles.module.scss
+++ b/front/src/features/LessonContent/styles.module.scss
@@ -94,28 +94,27 @@
 }
 
 .actions {
-  margin-top: 1.5rem;
 }
 
-.btnPrimary {
-  display: inline-block;
-  padding: 0.75rem 1.5rem;
-  background-color: #3b82f6;
-  color: #ffffff;
-  font-weight: 500;
-  border-radius: 0.375rem;
-  text-align: center;
-  transition: background-color 0.2s;
+// .btnPrimary {
+//   display: inline-block;
+//   padding: 0.75rem 1.5rem;
+//   background-color: #3b82f6;
+//   color: #ffffff;
+//   font-weight: 500;
+//   border-radius: 0.375rem;
+//   text-align: center;
+//   transition: background-color 0.2s;
 
-  &:hover {
-    background-color: var(--link-hover-color);
-  }
+//   &:hover {
+//     background-color: var(--link-hover-color);
+//   }
 
-  &:disabled {
-    opacity: 0.5;
-    cursor: not-allowed;
-  }
-}
+//   &:disabled {
+//     opacity: 0.5;
+//     cursor: not-allowed;
+//   }
+// }
 
 .btnSecondary {
   display: inline-block;
@@ -143,7 +142,7 @@
 }
 
 .tryAgain {
-  margin-top: 1rem;
+  // margin-top: 1rem;
 }
 
 .video {
