--- a/front/src/styles/lesson.scss
+++ b/front/src/styles/lesson.scss
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  margin-bottom: 20px;
 }
 
 .questionText {
@@ -22,7 +23,9 @@
   padding: 1.5rem;
   border-radius: 0.5rem;
   background-color: #ffffff;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  box-shadow:
+    0 1px 3px 0 rgba(0, 0, 0, 0.1),
+    0 1px 2px 0 rgba(0, 0, 0, 0.06);
 
   img {
     max-width: calc(100vw - 88px);
