--- a/front/src/components/VideoComponent/video.module.scss
+++ b/front/src/components/VideoComponent/video.module.scss
@@ -1,16 +1,7 @@
-.videosPage {
-  display: flex;
-  flex-direction: column;
-}
-
-.videoList {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-}
+@use "../../styles/helpers.scss";
 
 .videoItem {
-  flex: 0 1 300px;
+  flex: 2 1 260px;
   min-width: 0;
   border-radius: 6px;
 
@@ -21,6 +12,11 @@
       filter: brightness(1.5);
     }
   }
+
+  @include helpers.deviceWidth(onlyMobile) {
+    flex-grow: 2;
+  }
+  
 }
 
 .video {
@@ -55,7 +51,7 @@
 
 .videoPreview {
   width: 100%;
-  height: 200px;
+  aspect-ratio: 1.6;
   object-fit: cover;
   border-radius: 6px;
 }
