--- a/front/src/features/ComplexityLevelsPreview/styles.module.scss
+++ b/front/src/features/ComplexityLevelsPreview/styles.module.scss
@@ -16,7 +16,7 @@
   grid-template-columns: 1fr;
   gap: 2rem;
 
-  @media (min-width: 768px) {
+  @include helpers.deviceWidth(fromTabletPortrait) {
     grid-template-columns: repeat(3, 1fr);
   }
 }
